// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-174 MuiButton-root-148 MuiButton-contained-159 MuiButton-raised-162 AltinnIconButton-dottedBtn-146"
          disabled={false}
          id="createService"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-149"
          >
            <i
              className="fa fa-circle-plus AltinnIconButton-dottedBtnIcon-147"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-233"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-189 AltinnSearchInput-searchBox-186 MuiFormControl-fullWidth-192"
      >
        <div
          className="MuiFormControl-root-189"
        >
          <div
            className="MuiInputBase-root-206 MuiInput-root-193 AltinnSearchInput-searchBoxInput-187 MuiInputBase-formControl-207 MuiInput-formControl-194 MuiInputBase-adornedStart-210"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-223 AltinnSearchInput-searchBoxIcon-188 MuiInputAdornment-positionEnd-226"
            >
              <i
                className="fa fa-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-216 MuiInput-input-201 MuiInputBase-inputAdornedStart-221"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-243 MuiChip-colorPrimary-244 MuiChip-clickable-246 MuiChip-clickableColorPrimary-247 MuiChip-outlined-252 MuiChip-outlinedPrimary-253 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-240"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-262"
        >
          Mons Monsen
        </span>
      </div>
      <div
        className="MuiChip-root-243 MuiChip-colorPrimary-244 MuiChip-clickable-246 MuiChip-clickableColorPrimary-247 MuiChip-outlined-252 MuiChip-outlinedPrimary-253 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-240 AltinnFilterChip-chipActive-241"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-262"
        >
          This is the full name of this org
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-229 CategoryComponent-width100-230 CategoryComponent-fontSize_16-232"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-230 CategoryComponent-mar_top_100-228 CategoryComponent-fontSize_24-231"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-229 CategoryComponent-width100-230 CategoryComponent-fontSize_16-232"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-230 CategoryComponent-mar_top_100-228 CategoryComponent-fontSize_24-231"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot when empty 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-174 MuiButton-root-148 MuiButton-contained-159 MuiButton-raised-162 AltinnIconButton-dottedBtn-146"
          disabled={false}
          id="createService"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-149"
          >
            <i
              className="fa fa-circle-plus AltinnIconButton-dottedBtnIcon-147"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-233"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-189 AltinnSearchInput-searchBox-186 MuiFormControl-fullWidth-192"
      >
        <div
          className="MuiFormControl-root-189"
        >
          <div
            className="MuiInputBase-root-206 MuiInput-root-193 AltinnSearchInput-searchBoxInput-187 MuiInputBase-formControl-207 MuiInput-formControl-194 MuiInputBase-adornedStart-210"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-223 AltinnSearchInput-searchBoxIcon-188 MuiInputAdornment-positionEnd-226"
            >
              <i
                className="fa fa-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-216 MuiInput-input-201 MuiInputBase-inputAdornedStart-221"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-243 MuiChip-colorPrimary-244 MuiChip-clickable-246 MuiChip-clickableColorPrimary-247 MuiChip-outlined-252 MuiChip-outlinedPrimary-253 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-240"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-262"
        >
          Mons Monsen
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-229 CategoryComponent-width100-230 CategoryComponent-fontSize_16-232"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-230 CategoryComponent-mar_top_100-228 CategoryComponent-fontSize_24-231"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-229 CategoryComponent-width100-230 CategoryComponent-fontSize_16-232"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-230 CategoryComponent-mar_top_100-228 CategoryComponent-fontSize_24-231"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;
